fix : remove dark mode

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -3,12 +3,6 @@
 @tailwind utilities;
 
 
-/* @layer base {
-  body {
-    @apply bg-[#f3f5fb] dark:bg-[#343a40];
-  }
-} */
-
 
 @layer components {
   .transition-bg-hover {
